# BBC-scrapper

./: README.MD  pyproject.toml
bbcscraper/: BBCNews.xlsx  manage.py
bbcscraper/bbcscraper/: asgi.py  settings.py  urls.py  wsgi.py
bbcscraper/scraper/: BBCParser.py  Selenium.py  cron.py  models.py  utils.py
bbcscraper/scraper/migrations/: 0001_initial.py  0002_alter_news_url.py
