[tool.poetry]
name = "django-bbc-scraper"
version = "0.1.0"
description = ""
authors = ["MankoMax <fanatscape@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
webdriver-manager = "^3.8.5"
selenium = "^4.7.2"
django-crontab = "^0.7.1"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
